improved application and admin stats
